--- a/common/src/main/resources/assets/arts_and_crafts/lang/ja_jp.json
+++ b/common/src/main/resources/assets/arts_and_crafts/lang/ja_jp.json
@@ -25,7 +25,7 @@
   "block.arts_and_crafts.black_mud_brick_stairs": "黒色の泥レンガの階段",
   "block.arts_and_crafts.black_mud_brick_wall": "黒色の泥レンガの塀",
   "block.arts_and_crafts.black_mud_bricks": "黒色の泥レンガ",
-  "block.arts_and_crafts.black_plaster": "黒色の石膏板",
+  "block.arts_and_crafts.black_plaster": "黒色の石膏ボード",
   "block.arts_and_crafts.black_polished_soapstone": "黒色の磨かれた滑石",
   "block.arts_and_crafts.black_polished_soapstone_slab": "黒色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.black_polished_soapstone_stairs": "黒色の磨かれた滑石の階段",
@@ -57,7 +57,7 @@
   "block.arts_and_crafts.blue_mud_brick_stairs": "青色の泥レンガの階段",
   "block.arts_and_crafts.blue_mud_brick_wall": "青色の泥レンガの塀",
   "block.arts_and_crafts.blue_mud_bricks": "青色の泥レンガ",
-  "block.arts_and_crafts.blue_plaster": "青色の石膏板",
+  "block.arts_and_crafts.blue_plaster": "青色の石膏ボード",
   "block.arts_and_crafts.blue_polished_soapstone": "青色の磨かれた滑石",
   "block.arts_and_crafts.blue_polished_soapstone_slab": "青色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.blue_polished_soapstone_stairs": "青色の磨かれた滑石の階段",
@@ -82,7 +82,7 @@
   "block.arts_and_crafts.brown_mud_brick_stairs": "茶色の泥レンガの階段",
   "block.arts_and_crafts.brown_mud_brick_wall": "茶色の泥レンガの塀",
   "block.arts_and_crafts.brown_mud_bricks": "茶色の泥レンガ",
-  "block.arts_and_crafts.brown_plaster": "茶色の石膏板",
+  "block.arts_and_crafts.brown_plaster": "茶色の石膏ボード",
   "block.arts_and_crafts.brown_polished_soapstone": "茶色の磨かれた滑石",
   "block.arts_and_crafts.brown_polished_soapstone_slab": "茶色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.brown_polished_soapstone_stairs": "茶色の磨かれた滑石の階段",
@@ -123,7 +123,7 @@
   "block.arts_and_crafts.cyan_mud_brick_stairs": "青緑色の泥レンガの階段",
   "block.arts_and_crafts.cyan_mud_brick_wall": "青緑色の泥レンガの塀",
   "block.arts_and_crafts.cyan_mud_bricks": "青緑色の泥レンガ",
-  "block.arts_and_crafts.cyan_plaster": "青緑色の石膏板",
+  "block.arts_and_crafts.cyan_plaster": "青緑色の石膏ボード",
   "block.arts_and_crafts.cyan_polished_soapstone": "青緑色の磨かれた滑石",
   "block.arts_and_crafts.cyan_polished_soapstone_slab": "青緑色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.cyan_polished_soapstone_stairs": "青緑色の磨かれた滑石の階段",
@@ -149,7 +149,7 @@
   "block.arts_and_crafts.gray_mud_brick_stairs": "灰色の泥レンガの階段",
   "block.arts_and_crafts.gray_mud_brick_wall": "灰色の泥レンガの塀",
   "block.arts_and_crafts.gray_mud_bricks": "灰色の泥レンガ",
-  "block.arts_and_crafts.gray_plaster": "灰色の石膏板",
+  "block.arts_and_crafts.gray_plaster": "灰色の石膏ボード",
   "block.arts_and_crafts.gray_polished_soapstone": "灰色の磨かれた滑石",
   "block.arts_and_crafts.gray_polished_soapstone_slab": "灰色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.gray_polished_soapstone_stairs": "灰色の磨かれた滑石の階段",
@@ -174,7 +174,7 @@
   "block.arts_and_crafts.green_mud_brick_stairs": "緑色の泥レンガの階段",
   "block.arts_and_crafts.green_mud_brick_wall": "緑色の泥レンガの塀",
   "block.arts_and_crafts.green_mud_bricks": "緑色の泥レンガ",
-  "block.arts_and_crafts.green_plaster": "緑色の石膏板",
+  "block.arts_and_crafts.green_plaster": "緑色の石膏ボード",
   "block.arts_and_crafts.green_polished_soapstone": "緑色の磨かれた滑石",
   "block.arts_and_crafts.green_polished_soapstone_slab": "緑色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.green_polished_soapstone_stairs": "緑色の磨かれた滑石の階段",
@@ -207,7 +207,7 @@
   "block.arts_and_crafts.light_blue_mud_brick_stairs": "空色の泥レンガの階段",
   "block.arts_and_crafts.light_blue_mud_brick_wall": "空色の泥レンガの塀",
   "block.arts_and_crafts.light_blue_mud_bricks": "空色の泥レンガ",
-  "block.arts_and_crafts.light_blue_plaster": "空色の石膏板",
+  "block.arts_and_crafts.light_blue_plaster": "空色の石膏ボード",
   "block.arts_and_crafts.light_blue_polished_soapstone": "空色の磨かれた滑石",
   "block.arts_and_crafts.light_blue_polished_soapstone_slab": "空色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.light_blue_polished_soapstone_stairs": "空色の磨かれた滑石の階段",
@@ -232,7 +232,7 @@
   "block.arts_and_crafts.light_gray_mud_brick_stairs": "薄灰色の泥レンガの階段",
   "block.arts_and_crafts.light_gray_mud_brick_wall": "薄灰色の泥レンガの塀",
   "block.arts_and_crafts.light_gray_mud_bricks": "薄灰色の泥レンガ",
-  "block.arts_and_crafts.light_gray_plaster": "薄灰色の石膏板",
+  "block.arts_and_crafts.light_gray_plaster": "薄灰色の石膏ボード",
   "block.arts_and_crafts.light_gray_polished_soapstone": "薄灰色の磨かれた滑石",
   "block.arts_and_crafts.light_gray_polished_soapstone_slab": "薄灰色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.light_gray_polished_soapstone_stairs": "薄灰色の磨かれた滑石の階段",
@@ -257,7 +257,7 @@
   "block.arts_and_crafts.lime_mud_brick_stairs": "黄緑色の泥レンガの階段",
   "block.arts_and_crafts.lime_mud_brick_wall": "黄緑色の泥レンガの塀",
   "block.arts_and_crafts.lime_mud_bricks": "黄緑色の泥レンガ",
-  "block.arts_and_crafts.lime_plaster": "黄緑色の石膏板",
+  "block.arts_and_crafts.lime_plaster": "黄緑色の石膏ボード",
   "block.arts_and_crafts.lime_polished_soapstone": "黄緑色の磨かれた滑石",
   "block.arts_and_crafts.lime_polished_soapstone_slab": "黄緑色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.lime_polished_soapstone_stairs": "黄緑色の磨かれた滑石の階段",
@@ -283,7 +283,7 @@
   "block.arts_and_crafts.magenta_mud_brick_stairs": "赤紫色の泥レンガの階段",
   "block.arts_and_crafts.magenta_mud_brick_wall": "赤紫色の泥レンガの塀",
   "block.arts_and_crafts.magenta_mud_bricks": "赤紫色の泥レンガ",
-  "block.arts_and_crafts.magenta_plaster": "赤紫色の石膏板",
+  "block.arts_and_crafts.magenta_plaster": "赤紫色の石膏ボード",
   "block.arts_and_crafts.magenta_polished_soapstone": "赤紫色の磨かれた滑石",
   "block.arts_and_crafts.magenta_polished_soapstone_slab": "赤紫色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.magenta_polished_soapstone_stairs": "赤紫色の磨かれた滑石の階段",
@@ -308,7 +308,7 @@
   "block.arts_and_crafts.orange_mud_brick_stairs": "橙色の泥レンガの階段",
   "block.arts_and_crafts.orange_mud_brick_wall": "橙色の泥レンガの塀",
   "block.arts_and_crafts.orange_mud_bricks": "橙色の泥レンガ",
-  "block.arts_and_crafts.orange_plaster": "橙色の石膏板",
+  "block.arts_and_crafts.orange_plaster": "橙色の石膏ボード",
   "block.arts_and_crafts.orange_polished_soapstone": "橙色の磨かれた滑石",
   "block.arts_and_crafts.orange_polished_soapstone_slab": "橙色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.orange_polished_soapstone_stairs": "橙色の磨かれた滑石の階段",
@@ -333,7 +333,7 @@
   "block.arts_and_crafts.pink_mud_brick_stairs": "桃色の泥レンガの階段",
   "block.arts_and_crafts.pink_mud_brick_wall": "桃色の泥レンガの塀",
   "block.arts_and_crafts.pink_mud_bricks": "桃色の泥レンガ",
-  "block.arts_and_crafts.pink_plaster": "桃色の石膏板",
+  "block.arts_and_crafts.pink_plaster": "桃色の石膏ボード",
   "block.arts_and_crafts.pink_polished_soapstone": "桃色の磨かれた滑石",
   "block.arts_and_crafts.pink_polished_soapstone_slab": "桃色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.pink_polished_soapstone_stairs": "桃色の磨かれた滑石の階段",
@@ -350,7 +350,7 @@
   "block.arts_and_crafts.pink_terracotta_shingle_stairs": "桃色のテラコッタの屋根板の階段",
   "block.arts_and_crafts.pink_terracotta_shingle_wall": "桃色のテラコッタの屋根板の塀",
   "block.arts_and_crafts.pink_terracotta_shingles": "桃色のテラコッタの屋根板",
-  "block.arts_and_crafts.plaster": "石膏板",
+  "block.arts_and_crafts.plaster": "石膏ボード",
   "block.arts_and_crafts.polished_gypsum": "磨かれた石膏",
   "block.arts_and_crafts.polished_gypsum_slab": "磨かれた石膏のハーフブロック",
   "block.arts_and_crafts.polished_gypsum_stairs": "磨かれた石膏の階段",
@@ -367,7 +367,7 @@
   "block.arts_and_crafts.purple_mud_brick_stairs": "紫色の泥レンガの階段",
   "block.arts_and_crafts.purple_mud_brick_wall": "紫色の泥レンガの塀",
   "block.arts_and_crafts.purple_mud_bricks": "紫色の泥レンガ",
-  "block.arts_and_crafts.purple_plaster": "紫色の石膏板",
+  "block.arts_and_crafts.purple_plaster": "紫色の石膏ボード",
   "block.arts_and_crafts.purple_polished_soapstone": "紫色の磨かれた滑石",
   "block.arts_and_crafts.purple_polished_soapstone_slab": "紫色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.purple_polished_soapstone_stairs": "紫色の磨かれた滑石の階段",
@@ -392,7 +392,7 @@
   "block.arts_and_crafts.red_mud_brick_stairs": "赤色の泥レンガの階段",
   "block.arts_and_crafts.red_mud_brick_wall": "赤色の泥レンガの塀",
   "block.arts_and_crafts.red_mud_bricks": "赤色の泥レンガ",
-  "block.arts_and_crafts.red_plaster": "赤色の石膏板",
+  "block.arts_and_crafts.red_plaster": "赤色の石膏ボード",
   "block.arts_and_crafts.red_polished_soapstone": "赤色の磨かれた滑石",
   "block.arts_and_crafts.red_polished_soapstone_slab": "赤色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.red_polished_soapstone_stairs": "赤色の磨かれた滑石の階段",
@@ -432,7 +432,7 @@
   "block.arts_and_crafts.white_mud_brick_stairs": "白色の泥レンガの階段",
   "block.arts_and_crafts.white_mud_brick_wall": "白色の泥レンガの塀",
   "block.arts_and_crafts.white_mud_bricks": "白色の泥レンガ",
-  "block.arts_and_crafts.white_plaster": "白色の石膏板",
+  "block.arts_and_crafts.white_plaster": "白色の石膏ボード",
   "block.arts_and_crafts.white_polished_soapstone": "白色の磨かれた滑石",
   "block.arts_and_crafts.white_polished_soapstone_slab": "白色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.white_polished_soapstone_stairs": "白色の磨かれた滑石の階段",
@@ -457,7 +457,7 @@
   "block.arts_and_crafts.yellow_mud_brick_stairs": "黄色の泥レンガの階段",
   "block.arts_and_crafts.yellow_mud_brick_wall": "黄色の泥レンガの塀",
   "block.arts_and_crafts.yellow_mud_bricks": "黄色の泥レンガ",
-  "block.arts_and_crafts.yellow_plaster": "黄色の石膏板",
+  "block.arts_and_crafts.yellow_plaster": "黄色の石膏ボード",
   "block.arts_and_crafts.yellow_polished_soapstone": "黄色の磨かれた滑石",
   "block.arts_and_crafts.yellow_polished_soapstone_slab": "黄色の磨かれた滑石のハーフブロック",
   "block.arts_and_crafts.yellow_polished_soapstone_stairs": "黄色の磨かれた滑石の階段",
